Tue Sep 14 22:13:28 MEST 1999   Raphael Manfredi <Raphael_Manfredi@pobox.com>

. Description:

	Integrated "thread-safe" patch from Murray Nesbitt.
	Note that this may not be very efficient for threaded code,
	see comment in the code.

	Try to avoid compilation warning on 64-bit CPUs. Can't test it,
	since I don't have access to such machines.

Mon Jul 12 14:37:19 METDST 1999   Raphael Manfredi <Raphael_Manfredi@pobox.com>

. Description:

	changed my e-mail to pobox.

	mentionned it is not thread-safe.

	updated version number.

	uses new internal PL_* naming convention.

Fri Jul  3 13:38:16 METDST 1998   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Updated benchmark figures due to recent optimizations done in
	store(): tagnums are now stored as-is in the hash table, so
	no surrounding SV is created. And the "shared keys" mode for
	hash table was turned off.

	Fixed backward compatibility (wrt 0.5@9) for retrieval of
	blessed refs. That old version did something wrong, but the
	bugfix prevented correct retrieval of the old format.

Mon Jun 22 11:00:48 METDST 1998   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Changed benchmark figures.

	Adjust refcnt of tied objects after calling sv_magic() to avoid
	memory leaks.  Contributed by Jeff Gresham.

Fri Jun 12 11:50:04 METDST 1998   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Added workaround for persistent LVALUE-ness in perl5.004. All
	scalars tagged as being an lvalue are handled as if they were
	not an lvalue at all.  Added test for that LVALUE bug workaround.

	Now handles Perl immortal scalars explicitely, by storing &sv_yes
	as such, explicitely.

	Retrieval of non-immortal undef cannot be shared. Previous
	version was over-optimizing by not creating a separate SV for
	all undefined scalars seen.

Thu Jun  4 17:21:51 METDST 1998   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Baseline for Storable-0.6@0.
